# spill3r

./: README.md  pyproject.toml  sample-wordlist.txt
spill3r/: spill3r.py
tests/: test_spill3r.py
